# DrawMtxAsThumbnail

./: .gitignore  LICENSE  MANIFEST.in  MatGen.c  README.md  main.py  project_configure.csv  project_configure.json  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: ci.yml  code-quality.yml  publish.yml  python-package.yml  release.yml
DrawMtxAsThumbnail/: Drawer.py  __init__.py  main.py
DrawMtxAsThumbnail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MatGen/: MatGen.c  MatGen.pyx  _MatGen.c
MtxDrawer/: Drawer.py  __init__.py  main.py
complete/fig/: mtx-drawer.ts
complete/zsh/: _mtx-drawer
