[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "Cython", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MtxDrawer"
version = "0.0.38"
description = "Draw Mtx As Thumbnail"
readme = "README.md"
license = "MIT"
authors = [
    {name = "RhythmLian", email = "RhythmLian@outlook.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "Qpro",
    "cython"
]

[project.urls]
Homepage = "https://github.com/Rhythmicc/DrawMtxAsThumbnail"
Repository = "https://github.com/Rhythmicc/DrawMtxAsThumbnail"

[project.scripts]
mtx-drawer = "MtxDrawer.main:main"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0", 
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["MtxDrawer*"]

[tool.setuptools.package-data]
MtxDrawer = ["*.so", "*.pyd"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
path = "/opt/homebrew/lib/python3.13/site-packages/"
port = "22"

[tool.qpro.config]
build = "python3 setup.py build_ext --inplace"
entry_point = ""
executable = "python3 -m MtxDrawer.main"
input_file = ""
template_root = ""
enable_complete = true
